Fix ordering buttons, tweak highlight, fix filter z-index

--- a/static/sass/filters.scss
+++ b/static/sass/filters.scss
@@ -5,24 +5,26 @@
 
 #projectlist_sort {
     background-color: #0c0c0c;
-    border-top:1px solid #353535;
-    border-bottom:1px solid black;
+    //border-top:1px solid #353535;
+    //border-bottom:1px solid black;
     padding:3px;
     padding-top:5px;
     padding-bottom:5px;
     
-    @include shadow(4px, black); 
-	@include border-radius(4px);
+    //@include shadow(4px, black); 
+	//@include border-radius(4px);
     position:absolute;
     right:0px;
-    top:0px;
+    top:3px;
     
     h4{
         margin-top:8px;
     }
-    
+    .rss {
+        display: inline-block;
+    }
     .button{
-        top:1px;
+        top:4px;
         margin-left:3px;
         margin-right:4px;
         @include shadow(4px, black); 
@@ -31,8 +33,8 @@
 
 
 #projectlist_sort_buttons{
-    display:block;
-    float:left;
+    display:inline-block;
+
     
     .filter-on a.button {
         background-image:url("../images/base/minibutton_red.jpg");
@@ -85,7 +87,6 @@
     overflow:hidden;
     top:auto;
     bottom:0px;
-    z-index:200;
     margin-left:8px;
     margin-right:7px;
 }
