--- a/static/sass/project_card.scss
+++ b/static/sass/project_card.scss
@@ -5,7 +5,7 @@
 
 #projects_list{
 	position:relative;
-	margin-top:40px;
+	margin-top:20px;
     /*padding-bottom:15px;*/
     float:left;
 }
@@ -26,6 +26,8 @@
 	}
 	a:hover {
 		border: 1px solid #848484;
+		@include shadow(8px, #848484); 
+		@include border-radius(8px);
 		text-decoration: none;
 		color: #bdbdbd;
 	}
